<resources>
    <string name="app_name">Попутчики ГПНС</string>
    <string name="enter">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="gpns">Газпром Нефтехим Салават</string>
    <string name="welcome_text_second">Поиск попутчиков</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="finish_login_button">Продолжить</string>
    <string name="cofirm_password">Подтвердите пароль</string>
    <string name="user_name">Ваше имя</string>
    <string name="search">поиск</string>
    <string name="chat">мессенджер</string>
    <string name="profile">профиль</string>
    <string name="chat_chapter">Мессенджер</string>
    <string name="common_chat">Общий чат</string>
    <string name="last_msg_in_chat">последнее сообщение в этом чате</string>
    <string name="all_users">Все пользователи</string>
    <string name="user_name_example">Петр Васильев</string>
    <string name="_12_12_2022">Был(а) в сети 12.12.2022</string>
    <string name="_22_15">22:15</string>
    <string name="hello_how_aure_you">hey, how r u?</string>
    <string name="recycler_chat_header_example">26 ноября</string>
    <string name="You_last_msg_author">Вы: </string>
    <string name="room_with_this_user_successfully_removed">Диалог с этим пользователем удалён</string>
    <string name="online_string">online</string>
    <string name="typing_string">Typing...</string>
    <string name="enter_ur_msg_text">Введите сообщение...</string>
    <string name="example_user_name">Ivan Ivanov</string>
    <string name="user_is_online_now_text">Сейчас онлайн</string>
    <string name="example_of_unread_msg_in_room">3</string>
    <string name="search_text">Если вы хотите и можете взять попутчиков, либо ищите водителя, с кем можно ездить на работу, пожалуйста, заполните соответствующую форму, чтобы людям было проще найти Вас</string>
    <string name="driver_form_btn_text">Я водитель, ищу попутчиков</string>
    <string name="companion_btn_search_text">Я ищу водителя, с кем ездить</string>
    <string name="driver_form_first_text">Анкета водителя 1/2</string>
    <string name="from">Откуда я выезжаю(район)*:</string>
    <string name="can_catch_comp_from">Так же могу забрать попутчика с:</string>
    <string name="drivre_destination">Я еду на*:</string>
    <string name="can_drive_also">Могу заехать по пути:</string>
    <string name="schedule">График*:</string>
    <string name="can_also_drive_in_turn">Готов ездить по очереди с другим водителем</string>
    <string name="how_long_trip_is_actual">На какой срок я ищу попутчика*:</string>
    <string name="continue_text">Продолжить</string>
    <string name="driver_car">Авто*:</string>
    <string name="driver_car_color">Цвет*:</string>
    <string name="driver_car_count_of_passengeres">Сколько попутчиков смогу взять?*</string>
    <string name="driver_car_gos_number">Гос. номер:</string>
    <string name="trip_price">Цена поездки:</string>
    <string name="driver_comment">Комментарий водителя:</string>
    <string name="finish_driver_form">Разместить анкету</string>
    <string name="driver_form_second_text">Анкета водителя 2/2</string>
    <string name="example_drive_from">ост. Льва Толстого</string>
    <string name="driveto">Куда:</string>
    <string name="example_frive_dest">Проходная № 3</string>
    <string name="day_schedule_example">Дневной 8:30 - 17:30</string>
    <string name="look_trip">Смотреть подробнее</string>
    <string name="search_for_compnaions">Поиск попутчиков</string>
    <string name="companion_form_text">Анкета попутчика</string>
    <string name="from_where_could_driver_catch">Откуда можно меня забрать?*</string>
    <string name="companion_go_to">Еду на*:</string>
    <string name="companion_actuial_trip_time">Буду попутчиком в течение*:</string>
    <string name="companion_able_to_pay_for_trip">Готов(а) платить за поездку:</string>
    <string name="no_pay_companion">(оставьте это поле пустым, если хотите договориться с водителем лично)</string>
    <string name="no_pay_driver">(оставьте это поле пустым, если хотите договориться с попутчиками лично)</string>
    <string name="companion_form_comment">Комментарий попутчика:</string>
    <string name="companion_role">Попутчик</string>
    <string name="comp_comf_to_catch">Удобно забрать:</string>
    <string name="be_comp_in_time">Будет попутчиком в течение:</string>
    <string name="suggest_place_in_ur_car">Предложить место в Вашем авто</string>
    <string name="dirver_role">Водитель</string>
    <string name="driver_leave_from">Выезжает от:</string>
    <string name="driver_leave_at">в:</string>
    <string name="driver_able_to_catch_comp_form">Может забрать попутчиков от:</string>
    <string name="driver_goues_to">Едет на:</string>
    <string name="driver_able_to_visit_also">Может заехать по пути:</string>
    <string name="driver_able_to_drive_in_turn">Готов ездить по очереди с другим водителем:</string>
    <string name="drives_in_trip_in_time">Ездит по маршруту в течении:</string>
    <string name="driver_car_avaliable_places">Осталось мест:</string>
    <string name="driver_trip_price">Цена поездки:</string>
    <string name="suggest_to_drive_together">Предложить ездить вместе</string>
    <string name="common_chat_string">Общий чат</string>
    <string name="you">Вы: </string>
    <string name="car_model">Модель:</string>
    <string name="catch_nearest">Выберите ближайший</string>
    <string name="all_nessesary_fileds">Все обязательные поля отмечены звездочкой *</string>
    <string name="not_ness">Необязательно</string>
    <string name="enter_ur_district">Введите район</string>
    <string name="enter_new_place">Введите место</string>
    <string name="another_time">Другое время</string>
    <string name="audi">Audi</string>
    <string name="bmw">BMW</string>
    <string name="chevrolet">Chevrolet</string>
    <string name="daewoo">Daewoo</string>
    <string name="datsun">Datsun</string>
    <string name="ford">Ford</string>
    <string name="honda">Honda</string>
    <string name="hyundai">Hyundai</string>
    <string name="kia">Kia</string>
    <string name="lada">Лада</string>
    <string name="mazda">Mazda</string>
    <string name="mercedes">Mercedes</string>
    <string-array name="mitsubishi">
        <item>Outlander</item>
        <item>Lancer</item>
        <item>Delica</item>
        <item>Pajero</item>
        <item>ASX</item>
        <item>Другая</item>
    </string-array>
    <string-array name="nissan">
        <item>X-Trail</item>
        <item>Qashqai</item>
        <item>Note</item>
        <item>Juke</item>
        <item>Teana</item>
        <item>Almera</item>
        <item>Другая</item>
    </string-array>
    <string-array name="opel">
        <item>Astra</item>
        <item>Corsa</item>
        <item>Vectra</item>
        <item>Cherry</item>
        <item>Insignia</item>
        <item>Другая</item>
    </string-array>
    <string-array name="renault">
        <item>Logan</item>
        <item>Duster</item>
        <item>Kaptur</item>
        <item>Megane</item>
        <item>Sandero Stepway</item>
        <item>Другая</item>
    </string-array>
    <string-array name="skoda">
        <item>Octavia</item>
        <item>Rapid</item>
        <item>Fabia</item>
        <item>Kodiaq</item>
        <item>Yeti</item>
        <item>Другая</item>
    </string-array>
    <string-array name="tesla">
        <item>Model 3</item>
        <item>Model S</item>
        <item>Model X</item>
        <item>Model Y</item>
        <item>Другая</item>
    </string-array>
    <string-array name="toyota">
        <item>Camry</item>
        <item>Corolla</item>
        <item>Land Cruiser</item>
        <item>Rav4</item>
        <item>Rav4</item>
        <item>Mark</item>
        <item>Corona</item>
        <item>Carina</item>
        <item>Другая</item>
    </string-array>
    <string-array name="volkswagen">
        <item>Polo</item>
        <item>Tiguan</item>
        <item>Passat</item>
        <item>Touareg</item>
        <item>Jetta</item>
        <item>Другая</item>
    </string-array>
    <string name="another_car">Другая</string>
    <string name="model_of_car">Марка авто</string>
    <string name="another_color">Другой</string>
    <string name="car_modelL">Модель авто</string>
    <string name="another_car_color">Цвет авто</string>
    <string name="form_form">Откуда:</string>
    <string name="form_to">Куда:</string>
    <string name="form_schedule">График:</string>
    <string name="compa">Попутчик</string>
    <string name="driv">Водитель</string>
    <string name="trip_notifications_chapter">Уведомления о приглашениях:</string>
    <string name="deny">Отказаться</string>
    <string name="agree">Согласиться</string>
    <string name="my_comps">Мои попутчики</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="exit">Выйти</string>
    <string name="my_trip_form_text">Моя анкета</string>
    <string name="communicate_with_developer">Связаться с разработчиком</string>
    <string name="safe_politics">Политика конфиденциальности</string>
    <string name="delete_trip_form">Удалить форму</string>
    <string name="group_message_auhtor_test">~%s</string>
    <string name="message_author_in_group">%s:</string>
    <string name="user_is_typing">%s печатает...</string>
    <string name="policy_header">Политика конфиденциальности мобильного приложения</string>
    <string name="policy_1">
        1. Персональная информация пользователей, которую получает и обрабатывает МП
    </string>
    <string name="policy_1.1">
        1.1. В рамках настоящей Политики под «персональной информацией пользователя» понимаются:
    </string>
    <string name="policy_1.1.1">
        1.1.1. Персональная информация – это любая информация, которую пользователь предоставляет о себе, включая непосредственно персональные данные пользователя.
    </string>
    <string name="policy_1.1.2">
        1.1.2 Данные, которые автоматически передаются в процессе их использования с помощью установленного на устройстве пользователя программного обеспечения.
    </string>
    <string name="policy_1.2">
        1.2. Настоящая Политика применима только к данному Приложению. МП не контролирует и не несет ответственность за сайты и мобильные приложения третьих лиц, на которые пользователь может перейти по ссылкам, доступным в данном МП, в том числе в результатах поиска. На таких сайтах и в приложениях у пользователя может собираться или запрашиваться иная персональная информация, а также могут совершаться иные действия.
    </string>
    <string name="policy_1.3">
        1.3. МП в общем случае не проверяет достоверность персональной информации, предоставляемой пользователями, и не осуществляет контроль за их дееспособностью. Однако приложение исходит из того, что пользователь предоставляет достоверную и достаточную персональную информацию по вопросам, предлагаемым МП, и поддерживает эту информацию в актуальном состоянии.
    </string>
    <string name="policy_2">
        2. Цели сбора и обработки персональной информации пользователей
    </string>
    <string name="policy_2.1">
        2.1. МП собирает и хранит только те персональные данные, которые необходимы для предоставления и оказания услуг (исполнения соглашений и договоров с пользователем).
    </string>
    <string name="policy_2.2">
        2.2. Персональную информацию пользователя МП может использовать в следующих целях:
    </string>
    <string name="policy_2.2.1">
        2.2.1. Идентификация стороны в рамках соглашений и договоров;
    </string>
    <string name="policy_2.2.2">
        2.2.2. Предоставление пользователю персонализированных услуг;
    </string>
</resources>