<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    android:background="@drawable/search_item_form_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/search_recycler_item_background">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/user_avatar"
        android:layout_width="65dp"
        android:layout_height="65dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/default_avatar"
        android:scaleType="centerCrop"
        app:riv_oval="true"
        />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_user_name"
        android:textColor="@color/white"
        android:fontFamily="@font/montesserat_medium"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/user_avatar"
        app:layout_constraintStart_toEndOf="@id/user_avatar"
        android:layout_marginStart="10dp"
        />

    <TextView
        android:id="@+id/trip_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/user_name"
        app:layout_constraintStart_toEndOf="@id/user_name"
        android:layout_marginStart="5dp"
        android:text="@string/compa"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_regular"
        />

    <ImageView
        android:id="@+id/driver_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/driver_icon"
        app:layout_constraintTop_toTopOf="@id/user_name"
        app:layout_constraintBottom_toBottomOf="@id/user_name"
        app:layout_constraintStart_toEndOf="@id/trip_role"
        android:layout_marginStart="5dp"
        />

    <ImageView
        android:id="@+id/companion_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/companion_icon"
        app:layout_constraintTop_toTopOf="@id/user_name"
        app:layout_constraintBottom_toBottomOf="@id/user_name"
        app:layout_constraintStart_toEndOf="@id/trip_role"
        android:layout_marginStart="10dp"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/from_tv"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/form_form"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintStart_toStartOf="@id/user_name"
        android:layout_marginTop="15dp"
        />


    <TextView
        android:id="@+id/from_ed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/example_drive_from"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/from_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/from_tv"
        app:layout_constraintTop_toTopOf="@id/from_tv"
        />

    <TextView
        android:id="@+id/driveTo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/form_to"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/user_name"
        app:layout_constraintTop_toBottomOf="@+id/from_ed"
        android:layout_marginTop="15dp"/>


    <TextView
        android:id="@+id/driveTo_ed"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/example_frive_dest"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/driveTo_tv"
        app:layout_constraintStart_toStartOf="@id/from_ed"
        app:layout_constraintTop_toTopOf="@id/driveTo_tv" />

    <TextView
        android:id="@+id/schdule_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/form_schedule"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/driveTo_tv"
        app:layout_constraintTop_toBottomOf="@+id/driveTo_ed"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/schdule_ed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="150dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/day_schedule_example"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/schdule_tv"
        app:layout_constraintStart_toStartOf="@id/from_ed"
        app:layout_constraintTop_toTopOf="@id/schdule_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/look_trip_details_btn"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:text="@string/look_trip"
        android:fontFamily="@font/montesserat_medium"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/schdule_ed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/look_trip_details_btn_background"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="10dp"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>