<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/auth"
        android:scaleType="centerCrop"
        />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gpns"
        android:textColor="@color/white"
        android:fontFamily="@font/montesserat_medium"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="70dp"
        android:layout_marginStart="30dp"
        />

    <TextView
        android:id="@+id/welcome_text_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text_second"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        android:layout_marginTop="5dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/log_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintBottom_toTopOf="@id/sign_up_button"
        android:layout_marginBottom="30dp"
        android:background="@drawable/log_in_button_background"
        android:elevation="5dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:background="@drawable/sign_up_button_background"
        android:elevation="5dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>