<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/search_form_background">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/search_form_background_layout"
        />

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_btn_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        />
    
    <TextView
        android:id="@+id/search_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search_text"
        android:textColor="@color/white"
        android:fontFamily="@font/montesserat_medium"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="120dp"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="40dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/search_driver_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/driver_form_btn_text"
        android:fontFamily="@font/montesserat_medium"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/search_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/search_btn_background"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="120dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/search_companion_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/companion_btn_search_text"
        android:fontFamily="@font/montesserat_medium"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/search_driver_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/search_btn_background"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/non"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_nessesary_fileds"
        android:fontFamily="@font/montesserat_medium"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/search_companion_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>